<resources>
    <string name="app_name">codeAgain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coursename">CourseName</string>
    <string name="cDef">C content uploading soon</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="c_basic_intro">"\nC is developed by Dennis Ritchie and his team.\n\n It is Structured programming Language,\n\n C supports functions that enables easy maintainability of code by breaking large code into smaller modules\n\nIt is very Powerful and fast language,\n C programming language is a machine-independent programming language that is mainly used to create many types of applications and operating systems such as Windows, and other complicated programs such as the Oracle database, Git, Python interpreter, and games \nand is considered a programming foundation in the process of learning any other programming language.\n\n"</string>
    <string name="link_sample_code_basic_c"><a href="https://www.w3resource.com/c-programming-exercises/for-loop/c-for-loop-exercises-33.php">https://www.w3resource.com/c-programming-exercises/for-loop/c-for-loop-exercises-33.php</a> </string>
    <string name="link_intro_basic_c"><a href="https://www.simplilearn.com/tutorials/c-tutorial/use-of-c-language">https://www.simplilearn.com/tutorials/c-tutorial/use-of-c-language</a></string>
    <string name="c_basic_uses">\nThe program written in C is easy and quick to execute. As a consequence, the C programming language has resulted in the creation of many other languages. C++ (also known as C with classes), C#, Python, Java, JavaScript, Perl, PHP, Verilog, D, Limbo, and the Unix C shell are examples of these languages. \n\nEvery language employs the C programming language to varying degrees. Python, for example, uses C to provide standard libraries, whereas C++, PHP, and Perl need C for their syntaxes and control architectures.\n\n\n\nThe C programming language is the recommended language for creating embedded system drivers and applications. \nThe availability of machine-level hardware APIs, as well as the presence of C compilers, dynamic memory allocation, and deterministic resource consumption, make this language the most popular.</string>
    <string name="c_adv_intro"><![CDATA[How C Programming Language Works?\n\n
      C is a compiled programming language. This mean that we\'ll have to convert our source files (human-readable text files) into object files (machine-readable text files for microcontrollers, computers, and laptops). \n\n\n
      Editing\-\-
      \nWriting/editing source code is the initial stage in constructing an application in C.
       \nThe source code is a text file that contains all of the instructions that must be executed by the machine (understandable by humans).
        \n\nWe can use either a plain text editor (like Notepad) or the IDE\'s built-in editor.
        \nThe source code must follow the syntax of the C programming language.

         \n\nAfter the source file is complete, save it as a *.c file.
         \n\nNow we\'ll need a compiler to compile our source code.
         \n We\'ll need to install a C compiler on our PC and run it manually from the command prompt if we utilize a simple text editor for our source code.

         \n\nAn easier method is to utilize an IDE (which should have a compiler) and simply press a menu button to start it.

         \n\n\nA preliminary processing phase of the source file is included in the compilation task.
         \nA preprocessor is called by the compiler to perform the preprocessing. The preprocessor searches the source code for lines that begin with the # (hash) character.
         \nIncluding functions declared externally from our source code is one of the compiler\'s directives.
         \nThe preprocessor removes all compiler directives from the original code, but it keeps track of which extra files are required later in the process.
         \n\nA temporary file will be created at the end of the preprocessing, which will be hidden from the user.
         \n The compiler starts after the preparation is finished. Our source file is converted into an object file by the compiler.
         \nThe object file, also known as machine code, can be interpreted by the computer\'s or microcontroller\'s Central Processing Unit.  \n\n\nThe object file is complete, however, some undefined references are missing.
         \n\nThese undefined references are code fragments that must be fetched from a separate location.
          \nThe printf() function is the undefined reference in our scenario.
          \n\nWe know where to acquire the code for this function because the compiler directive (#includestdio.h>) mentioned it.
           \n\nstdio.h is a header file (extension *.h) that contains the declaration of our printf() function, among other things.

            \nWe describe where to get the definition of the printf() function by including the header file.
            ]]></string>
    <string name="c_adv_intro2">\n\n\nLinking —\n At this point, we must gather all of the files required by our application.              \n\nFor the external functions, we\'ll need the object files as well as the static library files. The external functions utilized in our source file are defined in the static library files (*.lib).\nThe machine code for the printf() function will be stored in the static library file in our scenario.            \n\n\nA linker is the one who does the linking.           \nIt will examine all of the object files for undefined references and replace them with the machine code from the library files.            \nWe\'ll have an executable file (*.exe for Windows applications, *.hex for microcontrollers) at the end of the linking procedure. \n\n\nLoading —\n  The programme file must then be loaded into the computer\'s memory before it can be executed.\n\nA loader is in charge of this.            \nThe loader is usually included in the executable file by the linker.            \nWhen we launch the executable, it activates the loader, which loads the programme into memory and starts the operation.</string>
    <string name="link_ltl_adv_c"><a href = "https://www.geeksforgeeks.org/difference-between-linker-and-loader/">https://www.geeksforgeeks.org/difference-between-linker-and-loader/</a></string>
    <string name="cpp_basic_intro"><![CDATA[C++ was developed by Bjarne Stroustrup at AT&T Bell Laboratories in Murray Hill,New Jersey, USA.\n In the early 1980\'s Stroustrup, an admirer of Simula67 and a strong supporter of C,\n
            wanted to combine the best of both the language and create a more powerful language that could support object-oriented (like java,c#) programming \n
            features and still retain the power and elegance of C.\n
            The result was C++(C with classes or extension of C).
             The idea of naming C++ come from C increment operator(++) which increase value by one unit.
             this increment operator is not available in Python language.\n


]]></string>
    <string name="cpp_basic_cvscpp"><![CDATA[ \nNearly all C program runs on C++ compiler except few
             \neg. C++ is strict toward typecasting and not support implicit typecasting
             \n like \n\tstruct node *newNode;
                      \n\tnewNode = malloc(sizeof(struct node));
                      \nthis will work in C but not in C++
                      \n\tnewNode = (struct node*)sizeof(struct node));
                      //explicitly typecasting
                      \nabove code will run in C++ and C both\n
                      Below points distinguish c and c++compiler
                      \n               \t    1.Calling a function before the declaration\n
                      \n               \t    2.Using normal pointer with const variable\n
                      \n               \t       3.Using typecast pointers\n
                      \n               \t       4.Declaring constant values without initializing\n
                      \n               \t       5.Using specific keywords as variable names\n
                      \n               \t       6.Strict type checking in c++\n
                      \n               \t       7.The return type of main() (only integer value in c++)
    ]]></string>
    <string name="link_cvscpp_basic_cpp"><a href = "https://www.geeksforgeeks.org/write-a-c-program-that-wont-compile-in-cpp/">https://www.geeksforgeeks.org/write-a-c-program-that-wont-compile-in-cpp/</a>></string>
    <string name="about_sql">About sql</string>
    <string name="about_sql_intro">
        Over the years, SQL has become an industry standard. For now, it is enough to say that SQL has become the basic language for working with databases. It has been recognized by all important organizations, and market giants such as Google and Facebook use it on a daily basis for many processes.\n

    </string>
    <string name="about_sql_intro2">"\n     Even before the System R project started (a project by IBM for testing relational algebra), Chamberlin and Boyce came up with a language they called SQUARE (Specifying Queries as Relational Expressions).\n\n They appreciated the power of Codd’s ideas, which allowed them to use a few lines to express complex queries that would take pages in a hierarchical database. However, they were convinced that their language was simpler and more accessible to regular users than Codd’s relational algebra and relational calculus.\n         SQUARE was the foundation for System R’s new query language. SQUARE used a lot of subscripts and some mathematical notation. It was difficult to type on a keyboard. Chamberlin and Boyce decided to adapt it so that it resembled the structure of an English sentence and was easier to type.          \n\nAnd that’s how SEQUEL(structured english query language) was born. Later SEQUEL was renamed to SQL because of a trademark issue. "</string>
    <string name="about_kotlin">About Kotlin</string>
    <string name="kotlin_basic_intro">"Kotlin is a general purpose, free, open source, statically typed “pragmatic” programming language initially designed for the JVM (Java Virtual Machine) and Android that combines object-oriented and functional programming features. It is focused on interoperability, safety, clarity, and tooling support. \nKotlin originated at JetBrains, the company behind IntelliJ IDEA, in 2010, and has been open source since 2012. "</string>
    <string name="kotlin_basic_intro2">. The language also supports higher-order functions, anonymous functions, lambdas, inline functions, closures, tail recursion, and generics. In other words, Kotlin has all of the features and advantages of a functional language.\n\n
    Even though Kotlin is a full-fledged functional programming language, it preserves most of the object-oriented nature of Java as an alternative programming style, which is very handy when converting existing Java code. Kotlin has classes with constructors, along with nested, inner, and anonymous inner classes, and it has interfaces like Java 8. \n\nKotlin does not have a new keyword. To create a class instance, call the constructor just like a regular function.</string>
    <string name="kotlin_basic_intro3">Up until May 2017, the only officially supported programming languages for Android were Java and C++. Google announced official support for Kotlin on Android at Google I/O 2017, and starting with Android Studio 3.0 Kotlin is built into the Android development toolset. Kotlin can be added to earlier versions of Android Studio with a plug-in.\n\nWhy Google adopted Kotlin, one possible answer is Oracle(Java) vs Google lawsuit  factor Java is very old language and many developer likes Java more than Kotlin even if Java has longer and boilerplate code.</string>
</resources>