<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_sql"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@color/black"
            />
        <TextView
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#034740"
            android:text="@string/about_sql_intro"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            android:fontFamily="casual"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/sql_development_history"
            />
        <TextView
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#034740"
            android:text="@string/about_sql_intro2"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            android:fontFamily="casual"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/sql_fam"
            />
        <TextView
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="15dp"
            android:background="#102030"
            android:text=""
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="italic"
            android:fontFamily="casual"/>




    </LinearLayout>
</ScrollView>